[4.0] Fix Safari issue with overflow hidden (#30420)
* [4.0] Fix Safari issue with overflow hidden

* correcting scss format

* Another solution adapted to various versions of Safari

* scss cs

* scss cs

* last scss cs...

--- a/administrator/templates/atum/scss/blocks/_form.scss
+++ b/administrator/templates/atum/scss/blocks/_form.scss
@@ -159,6 +159,7 @@ legend {
 
 .input-group-append {
   overflow: hidden;
+  transform: translate3d(0, 0, 0);
 
   [dir=ltr] & {
     border-top-right-radius: $border-radius;
